Add example JS websocket client

--- a/assets/package.json
+++ b/assets/package.json
@@ -3,19 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ConnorRigby/yourbotis.git"
+    "url": "git+https://github.com/YourBotIs/yourbot.git"
   },
   "author": "",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/ConnorRigby/yourbotis/issues"
+    "url": "https://github.com/YourBotIs/yourbot/issues"
   },
-  "homepage": "https://github.com/ConnorRigby/yourbotis#readme",
+  "homepage": "https://github.com/YourBotIs/yourbot#readme",
   "devDependencies": {
     "bulma": "^0.9.3",
     "install": "^0.13.0",
