--- a/assets/package.json
+++ b/assets/package.json
@@ -19,5 +19,8 @@
     "monaco-editor": "^0.30.0",
     "npm": "^8.1.3",
     "xterm": "^4.15.0"
+  },
+  "dependencies": {
+    "xterm-addon-fit": "^0.5.0"
   }
 }
