--- a/assets/package.json
+++ b/assets/package.json
@@ -21,6 +21,7 @@
     "xterm": "^4.15.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "xterm-addon-fit": "^0.5.0"
   }
 }
